--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -2,6 +2,7 @@
   "name": "nativeclean",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "proxy": "http://127.0.0.1:4875",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
