--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -13,12 +13,16 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
+    "install": "^0.13.0",
+    "npm": "^8.16.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "4.2.4",
