--- a/api/package.json
+++ b/api/package.json
@@ -21,8 +21,9 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "helmet": "^5.1.0",
-    "mongoose": "^6.4.5",
+    "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/validator": "^13.7.4",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
