--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -11,7 +11,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.2",
     "dotenv": "^16.0.1",
     "expo": "~45.0.0",
@@ -29,8 +31,15 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
   },
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+    "@babel/plugin-transform-react-jsx": "^7.18.10",
+    "@types/jest": "^28.1.8",
+    "@types/react": "^18.0.17",
+    "@types/react-native": "^0.69.5",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-linear-gradient": "^2.4.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "typescript": "^4.7.4"
+  }
 }
