--- a/expoNative/.babelrc
+++ b/expoNative/.babelrc
@@ -1,7 +1,11 @@
 {
     "plugins": [
+        "@babel/plugin-transform-react-jsx",
         [
-            "module:react-native-dotenv"
+            "module:react-native-dotenv",
+            {
+                "moduleName": "react-native-dotenv"
+            }
         ]
     ]
 }
