--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/geolocation": "^2.1.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.8.0",
     "@react-navigation/stack": "^6.2.2",
+    "@reduxjs/toolkit": "^1.8.5",
+    "animated": "^0.2.2",
     "dotenv": "^16.0.1",
     "expo": "~45.0.0",
     "expo-linear-gradient": "~11.3.0",
+    "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
     "install": "^0.13.0",
     "npm": "^8.16.0",
@@ -27,9 +32,13 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "0.30.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1"
   },
   "private": true,
   "devDependencies": {
@@ -39,6 +48,7 @@
     "@types/react-native": "^0.69.5",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-linear-gradient": "^2.4.0",
+    "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
     "typescript": "^4.7.4"
   }
