--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
     "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/cli-debugger-ui": "^9.0.0",
     "@react-native-community/geolocation": "^2.1.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.8.0",
@@ -21,6 +22,7 @@
     "animated": "^0.2.2",
     "dotenv": "^16.0.1",
     "expo": "~45.0.0",
+    "expo-camera": "~12.2.0",
     "expo-linear-gradient": "~11.3.0",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
@@ -50,6 +52,8 @@
     "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "babel-preset-expo": "8.5.1",
+    "@babel/core": "^7.12.9"
   }
 }
