--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -40,7 +40,8 @@
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "react-native-svg": "12.3.0"
   },
   "private": true,
   "devDependencies": {
