--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -43,7 +43,8 @@
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "expo-image-picker": "~13.1.1"
   },
   "private": true,
   "devDependencies": {
