--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -25,6 +25,7 @@
     "expo-camera": "~12.2.0",
     "expo-file-system": "~14.0.0",
     "expo-image-manipulator": "~10.3.1",
+    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-location": "~14.2.2",
     "expo-status-bar": "~1.3.0",
@@ -43,8 +44,7 @@
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
-    "expo-image-picker": "~13.1.1"
+    "redux-thunk": "^2.4.1"
   },
   "private": true,
   "devDependencies": {
