--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
-    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/cli-debugger-ui": "^9.0.0",
     "@react-native-community/geolocation": "^2.1.0",
     "@react-navigation/native": "^6.0.13",
@@ -20,7 +20,6 @@
     "@react-navigation/stack": "^6.3.1",
     "@reduxjs/toolkit": "^1.8.5",
     "animated": "^0.2.2",
-    "async-storage": "^0.1.0",
     "dotenv": "^16.0.2",
     "expo": "~45.0.0",
     "expo-camera": "~12.2.0",
