--- a/backEnd/spotApi/package.json
+++ b/backEnd/spotApi/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "nodemon",
-    "test": "mocha --loader=ts-node/esm --extension ts 'test/**/highOrder.test.ts'"
-  },
+    "test": "mocha --loader=ts-node/esm --extension ts 'test/**/highOrder.test.ts'",
+    "start:prod":"pm2  start --interpreter /usr/local/bin/ts-node-esm  server.ts --name spotServer  --log spotLog.json"  
+},
   "author": "",
   "license": "ISC",
   "devDependencies": {
