--- a/expoNative/.env
+++ b/expoNative/.env
@@ -5,4 +5,4 @@ DEVELOPMENT_AUTH_SERVER="http://192.168.1.39:3500"
 DEVELOPMENT_USER_SERVER="http://192.168.1.39:3750"
 DEVELOPMENT_IMAGE_SERVER="http://192.168.1.39:3250"
 DEVELOPMENT_SPOT_SERVER="http://192.168.1.39:3000"
-DEVELOPMENT_SESSION_SERVER=
+DEVELOPMENT_SERVER="https://development.alexandre-sage-dev.fr"
