--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -58,6 +58,7 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-preset-expo": "8.5.1",
+    "prettier": "^2.7.1",
     "typescript": "^4.8.3"
   },
   "eslintConfig": {
