--- a/backEnd/forecastApi/package.json
+++ b/backEnd/forecastApi/package.json
@@ -4,6 +4,7 @@
   "description": "User api microservice",
   "main": "server.js",
   "scripts": {
+    "start:prod":"pm2  start --interpreter /usr/local/bin/ts-node-esm  server.ts --name forecastServer  --log forecastLog.json",
     "start:dev": "nodemon",
     "test": "mocha --loader=ts-node/esm --extension ts 'test/**/highOrder.test.ts'"
   },
