--- a/expoNative/package.json
+++ b/expoNative/package.json
@@ -19,47 +19,49 @@
     "@react-navigation/native-stack": "^6.9.0",
     "@react-navigation/stack": "^6.3.1",
     "@reduxjs/toolkit": "^1.8.5",
+    "@sage/surf-app-ui-lib": "file:../sage-surf-app-ui-lib-0.1.0.tgz",
+    "@sage/ui-project": "file:../../sage-ui-project-0.1.0.tgz",
     "animated": "^0.2.2",
     "dotenv": "^16.0.2",
-    "expo": "~45.0.0",
-    "expo-camera": "~12.2.0",
-    "expo-file-system": "~14.0.0",
-    "expo-image-manipulator": "~10.3.1",
-    "expo-image-picker": "~13.1.1",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-location": "~14.2.2",
-    "expo-status-bar": "~1.3.0",
+    "expo": "^47.0.0",
+    "expo-camera": "~13.0.0",
+    "expo-file-system": "~15.1.1",
+    "expo-image-manipulator": "~11.0.0",
+    "expo-image-picker": "~14.0.1",
+    "expo-linear-gradient": "~12.0.1",
+    "expo-location": "~15.0.1",
+    "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
     "npm": "^8.19.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-dotenv": "^3.3.1",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-maps": "0.30.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
+    "react-native-maps": "1.3.2",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1"
   },
   "private": true,
   "devDependencies": {
-    "@babel/core": "^7.19.1",
+    "@babel/core": "^7.19.3",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
     "@types/jest": "^28.1.8",
-    "@types/react": "^18.0.21",
-    "@types/react-native": "^0.69.12",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-preset-expo": "8.5.1",
+    "babel-preset-expo": "~9.2.1",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.6.3"
   },
   "eslintConfig": {
     "root": true,
