--- a/backEnd/spotApi/package.json
+++ b/backEnd/spotApi/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/validator": "^13.7.10",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -37,6 +38,7 @@
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "superagent": "^7.0.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "validator": "^13.7.0"
   }
 }
