--- a/backEnd/sessionApi/package.json
+++ b/backEnd/sessionApi/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/chai": "^4.3.3",
     "@types/chai-http": "^4.2.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/helmet": "^4.0.0",
     "@types/mocha": "^10.0.0",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.3",
     "chai": "^4.3.6",
     "chai-http": "^4.3.0",
@@ -24,12 +27,14 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "formidable": "^3.2.5",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "morgan": "^1.10.0"
   }
 }
