--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --loader=ts-node/esm --extension ts 'populateDb.ts' --exit"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1"
   }
 }
