--- a/backEnd/sessionApi/package.json
+++ b/backEnd/sessionApi/package.json
@@ -33,6 +33,8 @@
     "express": "^4.18.2",
     "formidable": "^3.2.5",
     "helmet": "^6.0.0",
+    "install": "^0.13.0",
+    "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0"
