--- a/backEnd/sessionApi/package.json
+++ b/backEnd/sessionApi/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "nodemon",
-    "test": "mocha --loader=ts-node/esm --extension ts 'test/**/highOrder.test.ts'"
+    "test": "mocha --loader=ts-node/esm --extension  ts 'test/**/highOrder.test.ts' --watch"
   },
   "author": "",
   "license": "ISC",
